--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,4 +1,4 @@
-<h1> create an article </h1>
+<h1>edit exsiting article </h1>
 
 <% if @article.errors.any? %> 
 <h2> the following errors prevented the article from getting created </h2>
@@ -28,4 +28,5 @@
 
 <% end %> 
   
+
 <%= link_to "back to all article listing ", articles_path %> 
