--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,3 @@
 <h1> This is home page .</h1>
 
-<%= link_to 'about', about_path %> 
+<%= link_to 'alpha-blog', articles_path %> | <%= link_to 'about', about_path %> 
