--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,6 @@
-<h1> This is home page .</h1>
+<div class="center jumbotron">
+<h1> ALPHA BLOG.</h1>
 
-<%= link_to 'alpha-blog', articles_path %> | <%= link_to 'about', about_path %> 
+<%= link_to "Sign Up NOW!!", "#", class: "btn btn-primary btn-lg" %> 
+</div>
+
