--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -36,6 +36,15 @@ $navbar-default-bg: #08088A;
   font-weight: bold;
 }
 
+.article-action{
+  border-top: 1px solid #eaeaea;
+  padding-top: 5px;
+}
+
+.description{
+  margin-top: 0px;
+}
+
 footer {
   margin-top: 45px;
   padding-top: 5px;
