--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,8 +1,14 @@
-<h1> Showing selected article</h1>
 
-<p>Title: <%= @article.title  %></p>
-
-<p>Description: <%= @article.description %></p>
-
-<p><%= link_to "edit this article", edit_article_path(@article) %></p>
-<%= link_to "back to all article listing ", articles_path %> 
+<h2 align="center">Title: <%= @article.title  %></h2>
+<div class="well col-xs-8 col-xs-offset-2">
+  <h4 class="center description"><strong>Description:</strong></h4>
+  <hr>
+  <%= simple_format(@article.description) %>
+  <div class="article-action">
+  <%= link_to "edit this article", edit_article_path(@article), class: "btn btn-xs btn-primary" %>
+  <%= link_to "delete this article", article_path(@article), method: :delete, 
+                                     data: { confirm: "Are you want to delete this article?"}, 
+                                     class: "btn btn-xs btn-danger" %>
+  <%= link_to "back to all article listing ", articles_path, class: "btn btn-xs btn-success" %> 
+  </div>
+</div>
