--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,23 +1,22 @@
-<h1>This is the all article lists</h1>
+<h1 align="center">This is the all article lists</h1>
 
-<%= link_to "create new article", new_article_path %> 
-<p></p>
-<table>
-  <tr>
-    <th>Title</th>
-    <th>Description</th>
-  </tr>
-  
   <% @articles.each do |article| %>
-  
-  <tr>
-    <td><%= article.title %></td>
-    <td><%= article.description %></td>
-    <td><%= link_to 'edit', edit_article_path(article) %> </td>
-    <td><%= link_to 'show', article_path(article) %> </td>
-    <td><%= link_to 'delete', article_path(article), method: :delete, data: {confirm: "Are you sure to delete this article"}  %> </td>
-  </tr>
-  
+    <div class="row">  
+      <div class="col-xs-8 col-xs-offset-2">
+        <div class="well well-lg">
+          <div class="article-title">
+            <%= link_to article.title, article_path(article) %> 
+          </div>
+          <div class="article-body">
+            <%= truncate(article.description, lenghth: 100) %> 
+          </div>
+          <div class="article-action">
+            <%= link_to "edit this article", edit_article_path(article), class: "btn btn-xs btn-primary" %>
+            <%= link_to "delete this article", article_path(article), method: :delete, 
+                                               data: { confirm: "Are you want to delete this article?"}, 
+                                               class: "btn btn-xs btn-danger" %>
+          </div>
+        </div>
+      </div>
+    </div>
   <% end %> 
-  
-</table>
