--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -22,13 +22,13 @@ $navbar-default-bg: #08088A;
   text-align: center;
 }
 
-.jumbotron{
+.jumbotron {
   background-image: asset-url('writers-block.jpg');
   background-size: cover;
   height: 550px;
 }
 
-.jumbotron h1{
+.jumbotron h1 {
   color: #fff;
   text-align: center;
   margin-bottom: 30px;
@@ -36,29 +36,34 @@ $navbar-default-bg: #08088A;
   font-weight: bold;
 }
 
-.article-action{
+.article-action {
   border-top: 1px solid #eaeaea;
   padding-top: 5px;
 }
 
-.article-meta-details{
+.article-meta-details {
   border-top: 1px solid #eaeaea;
   margin-top: 15px;
 }
 
-.description{
+.description {
   margin-top: 0px;
 }
 
-.article-title{
+.article-title {
   font-weight: bold;
   font-size: 1.5em;
 }
 
-.article-body{
+.article-body {
   border-top: 1px solid #eaeaea;
   padding-top: 15px;
   padding-bottom: 15px;
+}
+
+.listing {
+  list-style: none;
+  padding-left: 0px;
 }
 
 footer {
@@ -68,11 +73,11 @@ footer {
   color: #777;
 }
 
-footer a:hover{
+footer a:hover {
   color: #222;
 }
 
-footer small{
+footer small {
   float: left;
 }
 
