--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,3 +1,6 @@
 <h1 align="center">This is the all article lists</h1>
-
-<%= render 'article', obj: @articles %> 
+<div align="center">
+<%= will_paginate %> 
+  <%= render 'article', obj: @articles %> 
+<%= will_paginate %> 
+</div>
