add login logout link, and help_method for detect user login status

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -25,7 +25,7 @@
           <%= f.label :password %> 
         </div>
         <div class="col-sm-8">
-          <%= f.text_field :password, class: "form-control", placeholder: "Enter password" %>
+          <%= f.password_field :password, class: "form-control", placeholder: "Enter password" %>
         </div>
       </div>
       
