--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -21,10 +21,12 @@
   <hr>
   <%= simple_format(@article.description) %>
   <div class="article-action">
-  <%= link_to "edit this article", edit_article_path(@article), class: "btn btn-xs btn-primary" %>
-  <%= link_to "delete this article", article_path(@article), method: :delete, 
-                                     data: { confirm: "Are you want to delete this article?"}, 
-                                     class: "btn btn-xs btn-danger" %>
+  <% if logged_in? && current_user == @article.user %>       
+    <%= link_to "edit this article", edit_article_path(@article), class: "btn btn-xs btn-primary" %>
+    <%= link_to "delete this article", article_path(@article), method: :delete, 
+                                       data: { confirm: "Are you want to delete this article?"}, 
+                                       class: "btn btn-xs btn-danger" %>
+  <% end %>
   <%= link_to "back to all article listing ", articles_path, class: "btn btn-xs btn-success" %> 
   </div>
 </div>
