--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,5 @@
 <div class="center jumbotron">
 <h1> ALPHA BLOG.</h1>
 
-<%= link_to "Sign Up NOW!!", "#", class: "btn btn-primary btn-lg" %> 
+<%= link_to "Sign Up NOW!!", signup_path, class: "btn btn-primary btn-lg" %> 
 </div>
-
